Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-62430

dcpdrain doesn't drain from all the nodes.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • Morpheus
    • master
    • couchbase-bucket
    • None
    • Untriaged
    • 0
    • Unknown

    Description

      Noticed while using DCP drain, the set of hosts to connect is incorrectly evaluated. It always ends up connecting to first host in the ServerList in CCCP.

      Connection (127.0.0.1:12000) took -30984781 ms - 0 mutations with a total of 300 bytes received in 0 snapshots and 0 oso snapshots (overhead 300 bytes, 300B/s)
      Connection (127.0.0.1:12000) took 76 ms - 31485 mutations with a total of 21659588 bytes received in 32 snapshots and 0 oso snapshots (overhead 806020 bytes, 20MB/s)
      

      Against a 2 node cluster, it connects only to one of the KV nodes.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            hareen.kancharla Hareen Kancharla
            hareen.kancharla Hareen Kancharla
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty