MB-62430: Drain DCP mutations from all the nodes.

- We are currently incorrectly only connecting to one of the nodes in
  the cluster.

Change-Id: I076208aec603ef378a7d8a647e8ead21094f98b3
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/211629
Tested-by: Hareen Kancharla <hareen.kancharla@couchbase.com>
Reviewed-by: Trond Norbye <trond.norbye@couchbase.com>